fix: Do not use guava